--- a/index.html
+++ b/index.html
@@ -118,8 +118,21 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Crypto Pro Tracker. All rights reserved.</p>
+        <div class="footer-columns">
+            <div>
+                <h4>Crypto World</h4>
+                <p>Your one-stop crypto tracking and portfolio app.</p>
+            </div>
+            <div>
+                <h4>Developer</h4>
+                <p> Moinak Das</p>
+                <p><a href="mailto:moinakdasw21@gmail.com">Contact Developer</a></p>
+                <p><a href="https://github.com/moinak-das/Crypto-World/tree/main" target="_blank">GitHub</a></p>
+            </div>
+        </div>
+        <p>&copy; 2025 Crypto World. All rights reserved.</p>
     </footer>
+    
 
     <script src="portfolio.js"></script> <script src="chart-handler.js"></script>
     <script src="script.js"></script>
